adl-backend/src/test/resources/functional/error/helloworld/HelloworldApplication.adl
composite error.helloworld.HelloworldApplication 
    extends GenericApplication<Helloworld> {
}